# dictator

./: .env.example  CLAUDE.md  README.md  main.py  prompts.yaml  pyproject.toml
dictator/: __init__.py  app.py  audio_recorder.py  constants.py  exceptions.py  llm_processor.py  process_manager.py  prompt_manager.py  system_tray.py  text_typer.py  transcription.py  window_detector.py
dictator/transcription/: __init__.py  assemblyai.py  base.py  deepgram.py
